
New Hardware Support
- Motorola RF Switches (Wireless Controllers)

Enhancements
- New DHCP fingerprint for Cisco SPA series IP Phone
- DHCP fingerprints sharing now allows submitter to send computer name, user-
  agent and a contact email to help us identify the devices better (#983)
- Updated Developer documentation regarding how to support new wireless hardware

Bug Fixes
- Wired 802.1X and MAC Authentication fixes in Network Devices Guide
- Fixed an issue with pfcmd-initiated VLAN re-evaluation if you assign VLANs 
  based on a client's connection-type (which is not the default)
- Fixed DHCP fingerprint sharing upload form
- Fixed Web Admin which referred to an inexistent Meru MC3000 module (it was 
  renamed Meru::MC in 2.0.1)
- Fixed an issue with the Meru module: If the controller sent SNMP traps to 
  PacketFence a thread would crash. Hopefully this configuration is not 
  required and is rarely done. Regression prevention tests have been added.

Translations
- New German (de) translation (Thanks to Tino Matysiak of Meetyoo Conferencing)

--------------------------------------------------------------------------------
Version 2.1.0 released on 2011-03-03

New Hardware Support
- Added Avaya as rebranded Nortel's
- Support for Nortel's ERS5500 with firmware 6.x
- 802.1X support with or without VoIP for Cisco 2950

New Features
- New configuration validation interface in Web Admin and with "pfcmd checkup"
- javascript-based network access detection (experimental)
- JSON bindings for node information (experimental)

Enhancements
- Improvements to our Nortel support
- Developer documentation update
- Friendlier startup error messages
- More configuration validation on startup and in 'pfcmd checkup' (#1025, 
  #1193)
- Improved support for Desktop Linux clients (#1188)
- New DHCP fingerprints for Cisco, UniData and Nortel IP Phones, Cisco Small 
  Business switch, Netgear router, Generic Linux, Gentoo, Meego, LaCie NAS, 