@@ -27,7 +27,7 @@ use pf::util;
 
 =head1 STATUS
 
-Tested against MeruOS version 3.6.1-6.7
+Tested against MeruOS version 3.6.1-67
 
 =head1 BUGS AND LIMITATIONS
 
@@ -57,7 +57,39 @@ This is a vendor issue and might be fixed in newer firmware versions.
 sub supportsWirelessDot1x { return $TRUE; }
 sub supportsWirelessMacAuth { return $TRUE; }
 
-# TODO this module needs a getVersion
+=item getVersion
+
+obtain image version information from switch
+
+=cut
+sub getVersion {
+    my ($this) = @_;
+    my $oid_mwWncVarsSoftwareVersion = '1.3.6.1.4.1.15983.1.1.4.1.1.27'; # from meru-wlan
+    my $logger = Log::Log4perl::get_logger( ref($this) );
+    if ( !$this->connectRead() ) {
+        return '';
+    }
+
+    # mwWncVarsSoftwareVersion sample output:
+    # 3.6.1-67
+
+    # first trying with a .0
+    $logger->trace("SNMP get_request for mwWncVarsSoftwareVersion: $oid_mwWncVarsSoftwareVersion.0");
+    my $result = $this->{_sessionRead}->get_request( -varbindlist => [$oid_mwWncVarsSoftwareVersion.".0"] );
+    if (defined($result)) {
+        return $result->{$oid_mwWncVarsSoftwareVersion.".0"};
+    }
+
+    # then trying straight
+    $logger->trace("SNMP get_request for mwWncVarsSoftwareVersion: $oid_mwWncVarsSoftwareVersion");
+    $result = $this->{_sessionRead}->get_request( -varbindlist => [$oid_mwWncVarsSoftwareVersion] );
+    if (defined($result)) {
+        return $result->{$oid_mwWncVarsSoftwareVersion};
+    }
+
+    # none of the above worked
+    $logger->warn("unable to fetch version information");
+}
 
 =item parseTrap
 
