@@ -24,6 +24,7 @@ Enhancements
 - DHCP fingerprints sharing now allows submitter to send computer name, user-
   agent and a contact email to help us identify the devices better (#983)
 - Updated Developer documentation regarding how to support new wireless hardware
+- Meru module now supports firmware version identification
 
 Bug Fixes
 - Wired 802.1X and MAC Authentication fixes in Network Devices Guide
